# capstone_google5days

./: .env.example  .gitignore  README.md  README_jp.md  pyproject.toml
doc/: 02_KAGGLE_BUILD_AND_TEST.md  02_TESTING.md  03_TESTING.md  04.md
src/capstone/: day1_stac_test.py
src/capstone/agent/: prompts copy.py  prompts.py  stac_agent_adk.py
src/capstone/aoi/: aoi_catalog.json  aoi_catalog.py
src/capstone/scripts/: 01_single_turn_test.ipynb  02_adk_web.ipynb  03_check_history.ipynb  notebook7f64f205bc.ipynb  run_eval.py  submition.ipynb
src/capstone/scripts/eval/: agent.py  boundary.evalset.json  clarification.evalset.json  normal.evalset.json  test_config.json
src/capstone/scripts/fig/: architechture.md
src/capstone/tools/: __init__.py  stac_search.py
tests/unit/: adk_test_cases.txt  test_adk_eval.py  test_aoi_catalog.py
